#pragma once

class Sprinkler
{
public:
    Sprinkler();

    ~Sprinkler();

    void setup();

    void activate();

    void deactivate();
};